@@ -599,6 +599,7 @@ CREATE TABLE IF NOT EXISTS `#__menu_template` (
 
 INSERT INTO `#__menu_template` VALUES (1, 'rhuk_milkyway', '0', '1', 'Default', '{"colorVariation":"blue","backgroundVariation":"blue","widthStyle":"fmax"}');
 INSERT INTO `#__menu_template` VALUES (2, 'bluestork', '1', '1', 'Default', '{"useRoundedCorners":"1","showSiteName":"0"}');
+INSERT INTO `#__menu_template` VALUES (3, 'atomic', '0', '0', '', '');
 
 # -------------------------------------------------------
 
